==> Infineon/XMC-for-Arduino/libraries/Wire/src/Wire.cpp <==
#include <stdlib.h>
#include <string.h>
#include <inttypes.h>
#include "xmc_gpio.h"
#include "Wire.h"
#include "SPI.h"

void TwoWire::begin(void)
{
    // Check if desire USIC channel is already in use
	if((XMC_I2C_config->channel->CCR & USIC_CH_CCR_MODE_Msk) == XMC_USIC_CH_OPERATING_MODE_SPI)
	{
		SPI.end();
	}

	hasError = false;
    isMaster = true;

    XMC_I2C_CH_Init(XMC_I2C_config->channel, &(XMC_I2C_config->channel_config));

    XMC_USIC_CH_SetInputSource(XMC_I2C_config->channel, XMC_USIC_CH_INPUT_DX0, XMC_I2C_config->input_source_dx0);
    XMC_USIC_CH_SetInputSource(XMC_I2C_config->channel, XMC_USIC_CH_INPUT_DX1, XMC_I2C_config->input_source_dx1);

    /* configure i2c tx fifo */
    XMC_USIC_CH_TXFIFO_Configure(XMC_I2C_config->channel,
  							   16,
  							   XMC_USIC_CH_FIFO_SIZE_16WORDS,
  							   (uint32_t)15);

    /* configure i2c rx fifo */
    XMC_USIC_CH_RXFIFO_Configure(XMC_I2C_config->channel,
  							   0,
  							   XMC_USIC_CH_FIFO_SIZE_16WORDS,
  								(uint32_t)(15));

    XMC_GPIO_Init((XMC_GPIO_PORT_t*)XMC_I2C_config->sda.port, (uint8_t)XMC_I2C_config->sda.pin, &(XMC_I2C_config->sda_config));
    XMC_GPIO_Init((XMC_GPIO_PORT_t*)XMC_I2C_config->scl.port, (uint8_t)XMC_I2C_config->scl.pin, &(XMC_I2C_config->scl_config));
	
    XMC_USIC_CH_SetInterruptNodePointer(XMC_I2C_config->channel,
                                        XMC_USIC_CH_INTERRUPT_NODE_POINTER_PROTOCOL,
                                        XMC_I2C_config->protocol_irq_service_request);
    NVIC_SetPriority((IRQn_Type)XMC_I2C_config->protocol_irq_num, 3U);
    NVIC_EnableIRQ((IRQn_Type)XMC_I2C_config->protocol_irq_num);

    XMC_I2C_CH_EnableEvent(XMC_I2C_config->channel, (uint32_t)(XMC_I2C_CH_EVENT_NACK | XMC_I2C_CH_EVENT_DATA_LOST | XMC_I2C_CH_EVENT_ARBITRATION_LOST | XMC_I2C_CH_EVENT_ERROR));

    XMC_I2C_CH_Start(XMC_I2C_config->channel);
}

void TwoWire::begin(uint8_t address)
{
    // Check if desire USIC channel is already in use
	if((XMC_I2C_config->channel->CCR & USIC_CH_CCR_MODE_Msk) == XMC_USIC_CH_OPERATING_MODE_SPI)
	{
		SPI.end();
	}
    isMaster = false;
    slaveAddress = address;

    XMC_I2C_CH_Init(XMC_I2C_config->channel, &(XMC_I2C_config->channel_config));

    XMC_USIC_CH_SetInputSource(XMC_I2C_config->channel, XMC_USIC_CH_INPUT_DX0, XMC_I2C_config->input_source_dx0);
    XMC_USIC_CH_SetInputSource(XMC_I2C_config->channel, XMC_USIC_CH_INPUT_DX1, XMC_I2C_config->input_source_dx1);

    XMC_GPIO_Init((XMC_GPIO_PORT_t*)XMC_I2C_config->sda.port, (uint8_t)XMC_I2C_config->sda.pin, &(XMC_I2C_config->sda_config));
    XMC_GPIO_Init((XMC_GPIO_PORT_t*)XMC_I2C_config->scl.port, (uint8_t)XMC_I2C_config->scl.pin, &(XMC_I2C_config->scl_config));

    XMC_USIC_CH_SetInterruptNodePointer(XMC_I2C_config->channel,
                                        XMC_USIC_CH_INTERRUPT_NODE_POINTER_RECEIVE,
                                        XMC_I2C_config->slave_receive_irq_service_request);
    XMC_USIC_CH_SetInterruptNodePointer(XMC_I2C_config->channel,
                                        XMC_USIC_CH_INTERRUPT_NODE_POINTER_ALTERNATE_RECEIVE,
                                        XMC_I2C_config->slave_receive_irq_service_request);
    XMC_USIC_CH_SetInterruptNodePointer(XMC_I2C_config->channel,
                                        XMC_USIC_CH_INTERRUPT_NODE_POINTER_PROTOCOL,
                                        XMC_I2C_config->protocol_irq_service_request);
    NVIC_SetPriority((IRQn_Type)XMC_I2C_config->slave_receive_irq_num, 3U);
    NVIC_EnableIRQ((IRQn_Type)XMC_I2C_config->slave_receive_irq_num);
    NVIC_SetPriority((IRQn_Type)XMC_I2C_config->protocol_irq_num, 3U);
    NVIC_EnableIRQ((IRQn_Type)XMC_I2C_config->protocol_irq_num);

    XMC_I2C_CH_SetSlaveAddress(XMC_I2C_config->channel, (address << 1));

    /*Flush receive buffer*/
    (void)XMC_I2C_CH_GetReceivedData(XMC_I2C_config->channel);
    (void)XMC_I2C_CH_GetReceivedData(XMC_I2C_config->channel);

    XMC_I2C_CH_EnableEvent(XMC_I2C_config->channel, (uint32_t)(XMC_I2C_CH_EVENT_DATA_LOST | XMC_I2C_CH_EVENT_ARBITRATION_LOST | XMC_I2C_CH_EVENT_ERROR));
    XMC_I2C_CH_EnableEvent(XMC_I2C_config->channel, (uint32_t)((uint32_t)XMC_I2C_CH_EVENT_STANDARD_RECEIVE | (uint32_t)XMC_I2C_CH_EVENT_ALTERNATIVE_RECEIVE));
    XMC_I2C_CH_EnableEvent(XMC_I2C_config->channel, (uint32_t)((uint32_t)XMC_I2C_CH_EVENT_SLAVE_READ_REQUEST | (uint32_t)XMC_I2C_CH_EVENT_STOP_CONDITION_RECEIVED));

    XMC_I2C_CH_Start(XMC_I2C_config->channel);
}

void TwoWire::begin(int address)
{
    begin((uint8_t)address);
}

void TwoWire::end(void)
{
    //  Only disable HW when USIC is used for I2C
	if((XMC_I2C_config->channel->CCR & USIC_CH_CCR_MODE_Msk) == XMC_USIC_CH_OPERATING_MODE_I2C)
	{
        
        XMC_GPIO_CONFIG_t default_output_port_config = {
            .mode = XMC_GPIO_MODE_OUTPUT_OPEN_DRAIN,
            .output_level = XMC_GPIO_OUTPUT_LEVEL_HIGH,
#if UC_FAMILY == XMC1
            .input_hysteresis = XMC_GPIO_INPUT_HYSTERESIS_STANDARD
#endif
        };

		XMC_I2C_CH_Stop(XMC_I2C_config->channel);

		XMC_GPIO_Init((XMC_GPIO_PORT_t*)XMC_I2C_config->sda.port, (uint8_t)XMC_I2C_config->sda.pin, &default_output_port_config);
		XMC_GPIO_Init((XMC_GPIO_PORT_t*)XMC_I2C_config->scl.port, (uint8_t)XMC_I2C_config->scl.pin, &default_output_port_config);

		XMC_USIC_CH_SetInputSource(XMC_I2C_config->channel, XMC_USIC_CH_INPUT_DX0, XMC_INPUT_A);
		XMC_USIC_CH_SetInputSource(XMC_I2C_config->channel, XMC_USIC_CH_INPUT_DX1, XMC_INPUT_A);

		NVIC_DisableIRQ((IRQn_Type)XMC_I2C_config->protocol_irq_num);
		XMC_I2C_CH_DisableEvent(XMC_I2C_config->channel, (uint32_t)(XMC_I2C_CH_EVENT_NACK | XMC_I2C_CH_EVENT_DATA_LOST | XMC_I2C_CH_EVENT_ARBITRATION_LOST | XMC_I2C_CH_EVENT_ERROR));

		if(isMaster == false)
		{
			XMC_I2C_CH_DisableEvent(XMC_I2C_config->channel, (uint32_t)((uint32_t)XMC_I2C_CH_EVENT_SLAVE_READ_REQUEST | (uint32_t)XMC_I2C_CH_EVENT_STOP_CONDITION_RECEIVED));

			NVIC_DisableIRQ((IRQn_Type)XMC_I2C_config->slave_receive_irq_num);
			XMC_I2C_CH_DisableEvent(XMC_I2C_config->channel, (uint32_t)((uint32_t)XMC_I2C_CH_EVENT_STANDARD_RECEIVE | (uint32_t)XMC_I2C_CH_EVENT_ALTERNATIVE_RECEIVE));
		}
		
		flush();
		
		/* Disable i2c tx fifo */
		XMC_USIC_CH_TXFIFO_Configure(XMC_I2C_config->channel,
								   16,
								   XMC_USIC_CH_FIFO_DISABLED,
								   (uint32_t)15);

		/* Disable i2c rx fifo */
		XMC_USIC_CH_RXFIFO_Configure(XMC_I2C_config->channel,
								   0,
								   XMC_USIC_CH_FIFO_DISABLED,
								   (uint32_t)(15));
	}
}

void TwoWire::setClock(uint32_t clock)
{
    XMC_I2C_CH_SetBaudrate(XMC_I2C_config->channel, clock);
}
