==> huaweiwx/ARDUINO_EFM32/hardware/arm/EFM32/libraries/Wire/src/Wire.cpp <==
#include <Arduino.h>
#include "Wire.h"
#include "stm32_gpio_af.h"
#define I2C1_EV_IRQn I2C1_IRQn
#define I2C2_EV_IRQn I2C1_IRQn
# define I2C_PORT_NR 4
# define I2C_PORT_NR 3
# define I2C_PORT_NR 2
# define I2C_PORT_NR 1

void TwoWire::begin(void){
    if(pdev->status !=WIRE_OK) return;  //
    pdev->rxBufferIndex = 0;
    pdev->rxBufferLength = 0;

    pdev->txBufferIndex = 0;
    pdev->txBufferLength = 0;

    pdev->isMaster = 1;


#if defined(I2C1) && (USE_I2C1)
    if (pdev->handle.Instance == I2C1) {
        __HAL_RCC_I2C1_CLK_ENABLE();
    }
#endif
#if defined(I2C2) && (USE_I2C2)
    if (pdev->handle.Instance == I2C2) {
        __HAL_RCC_I2C2_CLK_ENABLE();
    }
#endif
#if defined(I2C3) && (USE_I2C3)
    if (pdev->handle.Instance == I2C3) {
        __HAL_RCC_I2C3_CLK_ENABLE();
    }
#endif
#if defined(I2C4) && (USE_I2C4)
    if (pdev->handle.Instance == I2C4) {
        __HAL_RCC_I2C4_CLK_ENABLE();
    }
#endif
	
    stm32AfI2CInit(pdev->handle.Instance,
				   variant_pin_list[pdev->sda].port,
	               variant_pin_list[pdev->sda].pinMask,
				   variant_pin_list[pdev->scl].port,
				   variant_pin_list[pdev->scl].pinMask);

    pdev->handle.Init.OwnAddress1 = 0;
    pdev->handle.Init.AddressingMode = I2C_ADDRESSINGMODE_7BIT;
    pdev->handle.Init.DualAddressMode = I2C_DUALADDRESS_DISABLE;
    pdev->handle.Init.OwnAddress2 = 0;
    pdev->handle.Init.GeneralCallMode = I2C_GENERALCALL_DISABLE;
    pdev->handle.Init.NoStretchMode = I2C_NOSTRETCH_DISABLE;

    setClock(100000);
}

void TwoWire::begin(uint8_t address) {
    pdev->rxBufferIndex = 0;
    pdev->rxBufferLength = 0;

    pdev->txBufferIndex = 0;
    pdev->txBufferLength = 0;

    pdev->isMaster = 0;
	
    pdev->address = address << 1;


#if defined(I2C1) && (USE_I2C1)
    if (pdev->handle.Instance == I2C1) {
        slaveTwoWire[0] = this;
        __HAL_RCC_I2C1_CLK_ENABLE();
        HAL_NVIC_SetPriority(I2C1_EV_IRQn, I2C_PRIORITY, 0);
        HAL_NVIC_EnableIRQ(I2C1_EV_IRQn);
    }
#endif
#if defined(I2C2) && (USE_I2C2)
    if (pdev->handle.Instance == I2C2) {
        slaveTwoWire[1] = this;
        __HAL_RCC_I2C2_CLK_ENABLE();
        HAL_NVIC_SetPriority(I2C2_EV_IRQn, I2C_PRIORITY, 0);
        HAL_NVIC_EnableIRQ(I2C2_EV_IRQn);
    }
#endif
#if defined(I2C3) && (USE_I2C3)
    if (pdev->handle.Instance == I2C3) {
        slaveTwoWire[2] = this;
        __HAL_RCC_I2C3_CLK_ENABLE();
        HAL_NVIC_SetPriority(I2C3_EV_IRQn, I2C_PRIORITY, 0);
        HAL_NVIC_EnableIRQ(I2C3_EV_IRQn);
    }
#endif
#if defined(I2C4) && (USE_I2C4)
    if (pdev->handle.Instance == I2C4) {
        slaveTwoWire[3] = this;
        __HAL_RCC_I2C4_CLK_ENABLE();
        HAL_NVIC_SetPriority(I2C4_EV_IRQn, I2C_PRIORITY, 0);
        HAL_NVIC_EnableIRQ(I2C4_EV_IRQn);
    }
#endif

    stm32AfI2CInit (pdev->handle.Instance, 
					variant_pin_list[pdev->sda].port,
	                variant_pin_list[pdev->sda].pinMask,
					variant_pin_list[pdev->scl].port,
					variant_pin_list[pdev->scl].pinMask);
									
    pdev->handle.Init.OwnAddress1 = pdev->address;
    pdev->handle.Init.AddressingMode = I2C_ADDRESSINGMODE_7BIT;
    pdev->handle.Init.DualAddressMode = I2C_DUALADDRESS_DISABLE;
    pdev->handle.Init.OwnAddress2 = 0;
    pdev->handle.Init.GeneralCallMode = I2C_GENERALCALL_DISABLE;
    pdev->handle.Init.NoStretchMode = I2C_NOSTRETCH_DISABLE;

    setClock(100000);
    HAL_I2C_Slave_Receive_IT(&pdev->handle, &pdev->slaveBuffer, 1);

    //TODO rewrite IRQ handling to not use HAL_I2C_EV_IRQHandler, so F1 can also work L0?
#if !(defined(STM32F1)||defined(STM32L0))
     HAL_I2C_EnableListen_IT(&pdev->handle);
#endif
}

void TwoWire::begin(int address) {
   begin((uint8_t)address);
}

void TwoWire::end(void) {
  HAL_I2C_DeInit(&pdev->handle);
}

void TwoWire::setClock(uint32_t frequency) {

#if defined(STM32F1) || defined(STM32F2) || defined(STM32F4) || defined(STM32L1)
        pdev->handle.Init.ClockSpeed = frequency;
        pdev->handle.Init.DutyCycle = I2C_DUTYCYCLE_2;
#else
        UNUSED(frequency);
        // I2C1_100KHZ_TIMING needs to be #defined in variant.h for these boards
        // Open STM32CubeMX, select your chip, clock configuration according to systemclock_config.c
        // Enable all I2Cs, go to I2Cx configuration, parameter settings, copy the Timing value.
#if defined(I2C1) && (USE_I2C1)
            if (pdev->handle.Instance == I2C1) pdev->handle.Init.Timing = I2C1_100KHZ_TIMING;
#endif
#if defined(I2C2) && (USE_I2C2)
            if (pdev->handle.Instance == I2C2) pdev->handle.Init.Timing = I2C2_100KHZ_TIMING;
#endif
#if defined(I2C3) && (USE_I2C3)
            if (pdev->handle.Instance == I2C3) pdev->handle.Init.Timing = I2C3_100KHZ_TIMING;
#endif
#if defined(I2C4) && (USE_I2C4)
            if (pdev->handle.Instance == I2C4) pdev->handle.Init.Timing = I2C4_100KHZ_TIMING;
#endif

#endif

    HAL_I2C_Init(&pdev->handle);
}
